crates/runtime/tests/search/snapshots/integration_models__search__duckdb-duckdb-no_text_engine-dataset-multi_embeddings_megascience_vector_search_sql_vectors.snap
---
source: crates/runtime/tests/search/mod.rs
description: "SELECT id, answer, array_length(answer_embedding), trunc(_score, 3) as _score  FROM vector_search(qs, 'second', answer) order by _score desc, id desc LIMIT 4;"
---
"HTTP error: 400 Bad Request - Arrow error: Invalid argument error: column types must match schema types, expected FixedSizeList(256 x Float32) but found FixedSizeList(256 x Float32, field: '') at column index 2"
