crates/runtime/tests/search/snapshots/integration_models__search__duckdb-duckdb-no_text_engine-view_union_all_join-hybrid_single_column_megascience_vector_search_sql_filters_explain.snap
---
source: crates/runtime/tests/search/mod.rs
description: "SELECT id, answer, trunc(_score, 3) as _score FROM vector_search(qs, 'secondary', answer) where subject!='math' order by _score desc, id LIMIT 4"
---
Could not prepare EXPLAIN plan. SQL error: [{"id":1015,"answer":"Pedunculagin and alchemillin have astringent and wound-healing properties, possibly due to their high tannin content.","_score":0.282},{"id":821,"answer":"Dermatomycosis is caused by fungal infections, specifically various forms of *tinea*, such as athlete's foot (*tinea pedis*).","_score":0.243},{"id":449,"answer":"More than 10 years of follow-up is required, as late recurrences (beyond 12 years) have been reported in 5%–10% of patients.","_score":0.239},{"id":1193,"answer":"The body profile of Menidae is very deep and resembles a flat disc, due to the strongly curved ventral contour.","_score":0.203}]
